--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^4.1.0",
     "esm": "^3.2.25",
+    "joi": "^17.2.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
